# csv_analyzer_mcp_server

./: .gitignore  README.md  main.py  pyproject.toml
config/: settings.py
core/: analyzer.py  formatter.py  loader.py  transformer.py
data/: sample_data_usage.csv  sample_heart_checks.csv  sample_project_revenue.csv
