[project]
name = "csv-analyzer-mcp-server"
version = "0.1.0"
description = "MCP server that exposes CSV analysis as tools callable by AI assistants"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.1",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.0",
    "rich>=14.0.0",
]
